--- a/index.html
+++ b/index.html
@@ -208,20 +208,20 @@
 
             <h3>Diana &amp; Orlando</h3>
 
-            <p>Tenemos el honor de invitarles a la celebración de nuestra <strong>Boda Civil</strong>, que se realizará:
+            <p>Tenemos el honor de invitarles a la celebración de nuestro <strong>Matrimonio Civil</strong>, que se realizará:
             </p>
 
             <ul class="details">
                 <li>📍 <strong>Lugar:</strong> Palacio de la Municipalidad de Lima</li>
                 <li>📅 <strong>Fecha:</strong> Jueves, 12 de septiembre de 2025</li>
-                <li>🕚 <strong>Hora:</strong> 11:00 a.m.</li>
+                <li>🕚 <strong>Hora:</strong> 10:15 a.m.</li>
             </ul>
 
             <p>Luego del acto civil, los esperamos para compartir juntos una tarde inolvidable:</p>
 
             <ul class="details">
                 <li>🥂 <strong>Recepción:</strong> A partir de las 4:00 p.m.</li>
-                <li>📍 El local será informado con previa confirmación de asistencia.</li>
+                <li>📍 El local será informado con previa confirmación de asistencia. (Lima Norte)</li>
             </ul>
 
             <p><strong>Código de vestimenta:</strong> Formal<br>
