--- a/regalos.html
+++ b/regalos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de Regalos</title>
+    <title>Regalos</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -78,27 +78,47 @@
 <body>
 
     <div class="header">
-        <h1>Lista de Regalos</h1>
+        <h1>Regalos</h1>
     </div>
 
     <div class="container">
         <p>Tu presencia es el mejor regalo, pero si deseas hacernos un obsequio, aquí algunas sugerencias:</p>
 
-        <div class="gift">
+        <!-- <div class="gift">
             🛍️ <a href="https://www.falabella.com.pe" target="_blank">Falabella – Lista de boda</a><br />
             Código: 123456
-        </div>
+        </div> -->
 
-        <div class="gift">
+        <!-- <div class="gift">
             🛒 <a href="https://www.amazon.com/wedding" target="_blank">Amazon Wedding List</a><br />
             Nombre: Sergio y Ana
+        </div> -->
+
+        <div class="bank-info">
+            🏦 <strong>Plin</strong><br>
+            961774881<br>
+            Titular: Diana Osorio
         </div>
 
         <div class="bank-info">
-            🏦 <strong>Transferencia bancaria (opcional)</strong><br>
-            Banco BCP – Cuenta Ahorros: 123-4567890-0-12<br>
-            CCI: 002-123456789001234567<br>
-            Titular: Sergio Mendoza
+            🏦 <strong>Yape</strong><br>
+            938478292<br>
+            Titular: Orlando Yurivilca
+        </div>
+
+
+        <div class="bank-info">
+            🏦 <strong>Transferencia bancaria</strong><br>
+            Banco BCP – Cuenta Ahorros: xxxxxx<br>
+            CCI: xxxxxx<br>
+            Titular: Diana Osorio
+        </div>
+
+        <div class="bank-info">
+            🏦 <strong>Transferencia bancaria</strong><br>
+            Banco BCP – Cuenta Ahorros: 193 94825244072<br>
+            CCI: 00219319482524407211<br>
+            Titular: Orlando Yurivilca
         </div>
 
         <a class="back" href="index.html">← Volver a la invitación</a>
