--- a/index.html
+++ b/index.html
@@ -72,7 +72,17 @@
         .hero-content h1 {
             font-family: 'Allura', cursive;
             font-size: 4rem;
-            color: #c9a14a;
+            color: white ;
+             /* #c9a14a */
+            font-weight: 400;
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+        }
+
+        .hero-content h3 {
+            font-family: 'Allura', cursive;
+            font-size: 4rem;
+            color: white ;
+             /* #c9a14a */
             font-weight: 400;
             text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
         }
@@ -219,6 +229,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>¡Nos Casamos!</h1>
+            <h3>Diana &amp; Orlando</h3>
             <a href="#info" class="scroll-down">↓</a>
         </div>
     </section>
@@ -232,45 +243,45 @@
             <h3>Diana &amp; Orlando</h3>
             <br>
 
-            <p>Tenemos el honor de invitarles a la celebración de nuestro <strong>Matrimonio Civil</strong>, que se realizará:
-            </p>
+            <p>Tenemos el honor de invitarles a la celebración de nuestro Matrimonio Civil, que se realizará:</p>
 
             <ul class="details">
-                <li>📍 <strong>Lugar:</strong> Palacio de la Municipalidad de Lima</li>
-                <li>📅 <strong>Fecha:</strong> Jueves, 12 de septiembre de 2025</li>
-                <li>🕚 <strong>Hora:</strong> 10:15 a.m.</li>
+                <li>📍 Lugar: Palacio de la Municipalidad de Lima</li>
+                <li>📅 Fecha: Jueves, 12 de septiembre de 2025</li>
+                <li>🕚 Hora: 10:15 a.m.</li>
             </ul>
 
             <p>Luego del acto civil, los esperamos para compartir juntos una tarde inolvidable:</p>
 
             <ul class="details">
-                <li>🥂 <strong>Recepción:</strong> A partir de las 4:00 p.m.</li>
+                <li>🥂 Recepción: A partir de las 4:00 p.m.</li>
                 <li>📍 El local será informado con previa confirmación de asistencia. (Lima Norte)</li>
             </ul>
 
-            <p><strong>Código de vestimenta:</strong> Formal<br>
+            <p>Código de vestimenta: Formal<br>
                 <em>(Se solicita amablemente evitar los colores perla y blanco)</em>
             </p>
 
             <p>Será un honor contar con su presencia en este día tan especial.</p>
 
             <h4>¡Los esperamos!</h4>
-
-            <h3>Confirma tu asistencia</h3>
+            <br>
+            <h4>Confirma tu asistencia</h4>
             <br>
             <p>
                 <a href="confirmacion.html">
                     <button>Registrate</button>
                 </a>
             </p>
-
-            <h3>Regalos</h3>
+            <br>
+            <h4>Regalos</h4>
             <br>
             <p>
                 <a href="regalos.html" class="gift-link">→ Aquí cómo hacernos llegar tu presente</a>
             </p>
         </div>
     </section>
+
 </body>
 
 </html>
