--- a/index.html
+++ b/index.html
@@ -247,18 +247,18 @@
 
             <ul class="details">
                 <li>📍 Lugar: Palacio de la Municipalidad de Lima</li>
-                <li>📅 Fecha: Jueves, 12 de septiembre de 2025</li>
-                <li>🕚 Hora: 10:15 a.m.</li>
+                <li>📅 Fecha: Viernes, 12 de septiembre de 2025</li>
+                <li>🕚 Hora: 10:30 a.m.</li>
             </ul>
 
             <p>Luego del acto civil, los esperamos para compartir juntos una tarde inolvidable:</p>
 
             <ul class="details">
                 <li>🥂 Recepción: A partir de las 4:00 p.m.</li>
-                <li>📍 El local será informado con previa confirmación de asistencia. (Lima Norte)</li>
+                <li>📍 El local de recepción por confirmar (Lima Norte)</li>
             </ul>
 
-            <p>Código de vestimenta: Formal<br>
+            <p>🤵 Código de vestimenta: Formal<br>
                 <em>(Se solicita amablemente evitar los colores perla y blanco)</em>
             </p>
 
