--- a/regalos.html
+++ b/regalos.html
@@ -109,17 +109,26 @@
 
         <div class="bank-info">
             🏦 <strong>Transferencia bancaria</strong><br>
-            Banco BCP – Cuenta Ahorros: xxxxxx<br>
-            CCI: xxxxxx<br>
+            Banco BCP – Cuenta Soles: 219110540459908000<br>
+            CCI: 00221911105404599042<br>
             Titular: Diana Osorio
         </div>
 
-        <div class="bank-info">
+        <!-- <div class="bank-info">
             🏦 <strong>Transferencia bancaria</strong><br>
-            Banco BCP – Cuenta Ahorros: 193 94825244072<br>
+            Banco BCP – Cuenta Soles: 19394825244072<br>
             CCI: 00219319482524407211<br>
             Titular: Orlando Yurivilca
+        </div> -->
+
+        <div class="bank-info">
+            🏦 <strong>Transferencia bancaria</strong><br>
+            Banco Interbank – Cuenta Dolares: 8983260401972<br>
+            CCI: 00389801326040197240<br>
+            Titular: Orlando Yurivilca
         </div>
+
+
 
         <a class="back" href="index.html">← Volver a la invitación</a>
     </div>
