--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
             <ul class="details">
                 <li>🥂 Recepción: A partir de las 4:00 p.m.</li>
-                <li>📍 El local de recepción por confirmar (Lima Norte)</li>
+                <li>📍 Por confirmar (Lima Norte)</li>
             </ul>
 
             <p>🤵 Código de vestimenta: Formal<br>
