oy - fixes  - instrucciones

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         .top-links a {
             margin-right: 20px;
-            font-size: 0.95rem;
+            font-size: 1.1rem;
             color: #fff;
             text-decoration: none;
             font-weight: 500;
@@ -254,31 +254,39 @@
             <p>Luego del acto civil, los esperamos para compartir juntos una tarde inolvidable:</p>
 
             <ul class="details">
-                <li>🥂 Recepción: A partir de las 4:00 p.m.</li>
+                <li>🥂 Recepción: 3:00 p.m.</li>
                 <li>📍 Por confirmar (Lima Norte)</li>
             </ul>
 
             <p>🤵 Código de vestimenta: Formal<br>
-                <em>(Se solicita amablemente evitar los colores perla y blanco)</em>
+                <em>Se solicita amablemente evitar los colores perla y blanco</em>
             </p>
 
             <p>Será un honor contar con su presencia en este día tan especial.</p>
-
-            <h4>¡Los esperamos!</h4>
             <br>
-            <h4>Confirma tu asistencia</h4>
+            <p>¡Los esperamos!</p>
+            <br>
+            <h5>Confirma tu asistencia</h5>
             <br>
             <p>
                 <a href="confirmacion.html">
-                    <button>Registrate</button>
+                    <button>Registro</button>
                 </a>
             </p>
             <br>
-            <h4>Regalos</h4>
+            <h5>Regalos</h5>
             <br>
             <p>
                 <a href="regalos.html" class="gift-link">→ Aquí cómo hacernos llegar tu presente</a>
             </p>
+
+            <br>
+
+
+            <p>
+                <a href="instrucciones.html" class="gift-link">→ Otras consideraciones</a>
+            </p>
+
         </div>
     </section>
 
