--- a/instrucciones.html
+++ b/instrucciones.html
@@ -106,57 +106,14 @@
 <body>
 
     <div class="header">
-        <h1>Regalos</h1>
+        <h1>Otras consideraciones</h1>
     </div>
 
     <div class="container">
-        <p>Tu presencia es el mejor regalo, pero si deseas hacernos un obsequio, aquí algunas sugerencias:</p>
-
-        <!-- <div class="gift">
-            🛍️ <a href="https://www.falabella.com.pe" target="_blank">Falabella – Lista de boda</a><br />
-            Código: 123456
-        </div> -->
-
-        <!-- <div class="gift">
-            🛒 <a href="https://www.amazon.com/wedding" target="_blank">Amazon Wedding List</a><br />
-            Nombre: Sergio y Ana
-        </div> -->
-
-        <div class="bank-info">
-            🏦 <strong>Plin</strong><br>
-            961774881<br>
-            Titular: Diana Osorio
-        </div>
-
-        <div class="bank-info">
-            🏦 <strong>Yape</strong><br>
-            938478292<br>
-            Titular: Orlando Yurivilca
-        </div>
-
-
-        <div class="bank-info">
-            🏦 <strong>Transferencia bancaria</strong><br>
-            Banco BCP – Cuenta Soles: 219110540459908000<br>
-            CCI: 00221911105404599042<br>
-            Titular: Diana Osorio
-        </div>
-
-        <!-- <div class="bank-info">
-            🏦 <strong>Transferencia bancaria</strong><br>
-            Banco BCP – Cuenta Soles: 19394825244072<br>
-            CCI: 00219319482524407211<br>
-            Titular: Orlando Yurivilca
-        </div> -->
-
-        <div class="bank-info">
-            🏦 <strong>Transferencia bancaria</strong><br>
-            Banco Interbank – Cuenta Dolares: 8983260401972<br>
-            CCI: 00389801326040197240<br>
-            Titular: Orlando Yurivilca
-        </div>
-
-
+        <p>Codigo de vestimenta formal</p>
+        <p>Estacionamiento limitado</p>
+        <p>Horario, hasta la media noche</p>
+        <p>La celebración esta pensada para mayores de edad</p>
 
         <a class="back" href="index.html">← Volver a la invitación</a>
     </div>
