oy - fixes , publish

--- a/index.html
+++ b/index.html
@@ -246,28 +246,26 @@
             <p>Tenemos el honor de invitarles a la celebración de nuestro Matrimonio Civil, que se realizará:</p>
 
             <ul class="details">
-                <li>📍 Lugar: Palacio de la Municipalidad de Lima</li>
-                <li>📅 Fecha: Viernes, 12 de septiembre de 2025</li>
-                <li>🕚 Hora: 10:30 a.m.</li>
+                <li>Lugar: Palacio Municipal de Lima</li>
+                <li>Fecha: Viernes, 12 de septiembre de 2025</li>
+                <li>Hora: 10:30 a.m.</li>
             </ul>
-
+            <br>
             <p>Luego del acto civil, los esperamos para compartir juntos una tarde inolvidable:</p>
 
             <ul class="details">
-                <li>🥂 Recepción: 3:00 p.m.</li>
-                <li>📍 Por confirmar (Lima Norte)</li>
+                <li>Recepción: 3:30 p.m.</li>
+                <li>Hotel Wayra</li>
             </ul>
-
-            <p>🤵 Código de vestimenta: Formal<br>
-                <em>Se solicita amablemente evitar los colores perla y blanco</em>
-            </p>
-
-            <p>Será un honor contar con su presencia en este día tan especial.</p>
             <br>
+
+            <p>Código de vestimenta: Formal</p>
+            <br>
+            <p>Será un honor contar con su presencia en este día tan especial.</p>
+
             <p>¡Los esperamos!</p>
             <br>
-            <h5>Confirma tu asistencia</h5>
-            <br>
+            <h5>Confirma tu asistencia aquí</h5>
             <p>
                 <a href="confirmacion.html">
                     <button>Registro</button>
