--- a/instrucciones.html
+++ b/instrucciones.html
@@ -111,9 +111,16 @@
 
     <div class="container">
         <p>Codigo de vestimenta formal</p>
-        <p>Estacionamiento limitado</p>
+        <p>Se solicita amablemente evitar los colores perla y blanco</p>
+        <p>Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</p>
+        <p>Esta invitación es individual y está destinada exclusivamente al/ a la destinatario/a y su acompañante.</p>
+        <p>Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</p>
+
+        <p></p>
+        <p>Estacionamiento limitado, dentro del hotel, previa confirmacion con DNI</p>
+        <p>Por su seguridad, les recomendamos regresar a casa en taxi si han bebido alcohol durante la celebración</p>
         <p>Horario, hasta la media noche</p>
-        <p>La celebración esta pensada para mayores de edad</p>
+
 
         <a class="back" href="index.html">← Volver a la invitación</a>
     </div>
