--- a/index.html
+++ b/index.html
@@ -273,7 +273,6 @@
             </p>
             <br>
             <h5>Regalos</h5>
-            <br>
             <p>
                 <a href="regalos.html" class="gift-link">→ Aquí cómo hacernos llegar tu presente</a>
             </p>
@@ -282,7 +281,7 @@
 
 
             <p>
-                <a href="instrucciones.html" class="gift-link">→ Otras consideraciones</a>
+                <a href="instrucciones.html" class="gift-link">→ Otras consideraciones importantes</a>
             </p>
 
         </div>
