--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="es">
 
 <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invitación de Matrimonio</title>
+
+    <title>Invitación de Matrimonio – Diana & Orlando</title>
+
+    <!-- Descripción para buscadores -->
+    <meta name="description"
+        content="Acompáñanos a celebrar nuestro matrimonio. Toda la información sobre la ceremonia, la fiesta, el lugar y más." />
+
+    <!-- Palabras clave opcionales para SEO (menos relevantes hoy en día, pero no estorban) -->
+    <meta name="keywords" content="invitación de boda, matrimonio, Diana y Orlando, boda, fiesta, celebración" />
+
+    <!-- Autor -->
+    <meta name="author" content="Diana y Orlando" />
+
+    <!-- Para que se vea bonito al compartir en redes sociales (Open Graph de Facebook, WhatsApp, etc.) -->
+    <meta property="og:title" content="Invitación de Matrimonio – Diana & Orlando" />
+    <meta property="og:description" content="Nos casamos. Aquí encontrarás los detalles de la celebración." />
+    <meta property="og:image" content="https://dianayorlando.life/dyo1.jpg" /> <!-- imagen representativa -->
+    <meta property="og:url" content="https://dianayorlando.life" />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon (ícono en la pestaña del navegador) -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link
