--- a/regalos.html
+++ b/regalos.html
@@ -110,7 +110,7 @@
     </div>
 
     <div class="container">
-        <p>Tu presencia es el mejor regalo, pero si deseas hacernos un obsequio, aquí algunas sugerencias:</p>
+        <h4>Tu presencia es el mejor regalo, pero si deseas hacernos un obsequio, aquí algunas sugerencias:</h4>
 
         <!-- <div class="gift">
             🛍️ <a href="https://www.falabella.com.pe" target="_blank">Falabella – Lista de boda</a><br />
