--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         .top-links a {
             margin-right: 20px;
-            font-size: 1.1rem;
+            font-size: 0.9rem;
             color: #fff;
             text-decoration: none;
             font-weight: 500;
@@ -113,7 +113,7 @@
         .scroll-down {
             display: inline-block;
             margin-top: 20px;
-            font-size: 2rem;
+            font-size: 2.4rem;
             color: white;
             text-decoration: none;
             animation: bounce 2s infinite;
@@ -244,7 +244,7 @@
     <!-- Enlaces superiores -->
     <div class="top-links">
         <a href="confirmacion.html">Confirmar asistencia</a>
-        <a href="regalos.html">Lista de regalos</a>
+        <a href="regalos.html">Regalos</a>
     </div>
 
     <!-- Hero con texto desplazado hacia abajo -->
@@ -252,7 +252,7 @@
         <div class="hero-content">
             <h1>¡Nos Casamos!</h1>
             <h3>Diana &amp; Orlando</h3>
-            <a href="#info" class="scroll-down">↓</a>
+            <a href="#info" class="scroll-down"><strong>↓</strong></a>
         </div>
     </section>
 
