--- a/instrucciones.html
+++ b/instrucciones.html
@@ -48,20 +48,6 @@
             margin-bottom: 30px;
         }
 
-        .bank-info {
-            margin: 20px 0;
-            font-size: 1rem;
-            background: #fff7f2;
-            padding: 15px;
-            border: 1px dashed #e2c6aa;
-            border-radius: 8px;
-            color: #6d4c41;
-        }
-
-        .bank-info strong {
-            color: #a58256;
-        }
-
         .gift a {
             color: #a58256;
             text-decoration: none;
@@ -87,6 +73,17 @@
             border-bottom: 1px solid #c9a14a;
         }
 
+        ul.info-list {
+            text-align: left;
+            list-style: none;
+            padding-left: 0;
+            margin-top: 1rem;
+        }
+
+        ul.info-list li {
+            margin-bottom: 20px;
+        }
+
         @media (max-width: 600px) {
             .header h1 {
                 font-size: 2.2rem;
@@ -110,18 +107,23 @@
     </div>
 
     <div class="container">
-        <p>👗 Código de vestimenta formal</p>
-        <p>🚫 Se solicita amablemente evitar los colores perla y blanco</p>
-        <p>🚸 Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</p>
-        <p>🎟️ Esta invitación es individual y está destinada exclusivamente al/ a la destinatario/a y su acompañante.</p>
-        <p>📍 Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</p>
-
-        <p>🅿️ Estacionamiento limitado, dentro del hotel, previa confirmación con DNI</p>
-        <p>🚖 Por su seguridad, les recomendamos regresar a casa en taxi si han bebido alcohol durante la celebración</p>
-        <p>🕛 Horario, hasta la media noche</p>
+        <ul class="info-list">
+            <li>👗 Código de vestimenta formal</li>
+            <li>🚫 Se solicita amablemente evitar los colores perla y blanco</li>
+            <li>🚸 Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</li>
+            <li>🎟️ Nota: Esta invitación es individual y destinada únicamente al destinatario. <br>
+                <em>Si deseas asistir con un acompañante (+1), te pedimos amablemente comunicarte con nosotros para validar la disponibilidad.</em>
+            </li>
+            <li>📍 Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</li>
+            <li>🅿️ Estacionamiento limitado, dentro del hotel, previa confirmación con DNI</li>
+            <li>🚖 Por su seguridad, les recomendamos regresar a casa en taxi si han bebido alcohol durante la celebración
+            </li>
+            <li>🕛 Horario, hasta la media noche</li>
+        </ul>
 
         <a class="back" href="index.html">← Volver a la invitación</a>
     </div>
+
 
 
 </body>
