--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
         }
 
         @media (max-width: 600px) {
+
+            .top-links a {
+                font-size: 0.7rem;
+            }
+
                 .hero-phrase {
                     top: 80px; /* más bajo en móviles para que no choque */
                     font-size: 0.5rem;
@@ -288,8 +293,9 @@
 <body>
     <!-- Enlaces superiores -->
     <div class="top-links">
-        <a href="confirmacion.html">Confirmar asistencia</a>
+        <a href="confirmacion.html">Registrarse</a>
         <a href="regalos.html">Regalos</a>
+        <a href="instrucciones.html">Consideraciones</a>
     </div>
 
     <!-- Hero con texto desplazado hacia abajo -->
@@ -336,21 +342,19 @@
 
             <p>¡Los esperamos!</p>
             <br>
-            <h5>Confirma tu asistencia aquí</h5>
+            <h5 >Confirma tu asistencia aquí</h5>
             <p>
                 <a href="confirmacion.html">
                     <button>Registro</button>
                 </a>
             </p>
             <br>
-            <h5>Regalos</h5>
+
             <p>
-                <a href="regalos.html" class="gift-link">→ Aquí cómo hacernos llegar tu presente</a>
+                <a href="regalos.html" class="gift-link">→ Si deseas tener un detalle con nosotros, aquí te compartimos algunas
+                    ideas</a>
             </p>
-
             <br>
-
-
             <p>
                 <a href="instrucciones.html" class="gift-link">→ Otras consideraciones importantes</a>
             </p>
