oy - fixes instruc

--- a/instrucciones.html
+++ b/instrucciones.html
@@ -111,14 +111,10 @@
             <li>👗 Código de vestimenta formal</li>
             <li>🚫 Se solicita amablemente evitar los colores perla y blanco</li>
             <li>🚸 Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</li>
-            <li>🎟️ Nota: Esta invitación es individual y destinada únicamente al destinatario. <br>
-                <em>Si deseas asistir con un acompañante (+1), te pedimos amablemente comunicarte con nosotros para validar la disponibilidad.</em>
-            </li>
+            <li>🎟️ Esta invitación es personal y se extiende cordialmente al destinatario y a su esposo(a) o acompañante.<br></li>
             <li>📍 Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</li>
-            <li>🅿️ Estacionamiento limitado, dentro del hotel, previa confirmación con DNI</li>
-            <li>🚖 Por su seguridad, les recomendamos regresar a casa en taxi si han bebido alcohol durante la celebración
-            </li>
-            <li>🕛 Horario, hasta la media noche</li>
+            <li>🅿️ Estacionamiento disponible, dentro del hotel, (anticiparnos previo al evento con DNI/Placa)</li>
+
         </ul>
 
         <a class="back" href="index.html">← Volver a la invitación</a>
