oy - fix cuentas

--- a/regalos.html
+++ b/regalos.html
@@ -135,12 +135,12 @@
         </div>
 
 
-        <div class="bank-info">
+        <!-- <div class="bank-info">
             🏦 <strong>Transferencia bancaria</strong><br>
             Banco BCP – Cuenta Soles: 19105404599089<br>
             CCI: 00219110540459908958<br>
             Titular: Diana Osorio
-        </div>
+        </div> -->
 
         <!-- <div class="bank-info">
             🏦 <strong>Transferencia bancaria</strong><br>
@@ -149,14 +149,12 @@
             Titular: Orlando Yurivilca
         </div> -->
 
-        <div class="bank-info">
+        <!-- <div class="bank-info">
             🏦 <strong>Transferencia bancaria</strong><br>
             Banco Interbank – Cuenta Dolares: 8983260401972<br>
             CCI: 00389801326040197240<br>
             Titular: Orlando Yurivilca
-        </div>
-
-
+        </div> -->
 
         <a class="back" href="index.html">← Volver a la invitación</a>
     </div>
