oy - fix acompañantes

--- a/instrucciones.html
+++ b/instrucciones.html
@@ -111,7 +111,7 @@
             <li>👗 Código de vestimenta formal</li>
             <li>🚫 Se solicita amablemente evitar los colores perla y blanco</li>
             <li>🚸 Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</li>
-            <li>🎟️ Esta invitación es personal y se extiende cordialmente al destinatario y a su esposo(a) o acompañante.<br></li>
+            <li>🎟️ Esta invitación es personal y se extiende cordialmente al destinatario y a su esposo(a)<br></li>
             <li>📍 Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</li>
             <li>🅿️ Estacionamiento disponible, dentro del hotel, (anticiparnos previo al evento con DNI/Placa)</li>
 
