--- a/instrucciones.html
+++ b/instrucciones.html
@@ -107,14 +107,20 @@
     </div>
 
     <div class="container">
+        <h3>Direcciones</h3>
+        <ul class="info-list">
+            <li>📍Palacio Municipal de Lima: Jr. de la Union 300 (Frente a la plaza de Armas)</li>
+            <li>📍 Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</li>
+            <li>🅿️ Estacionamiento disponible en el hotel (anticiparnos previo al evento con DNI/Placa)</li>
+        </ul>
+
+        <h3>Otros detalles</h3>
         <ul class="info-list">
             <li>👗 Código de vestimenta formal</li>
             <li>🚫 Se solicita amablemente evitar los colores perla y blanco</li>
             <li>🚸 Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</li>
             <li>🎟️ Esta invitación es personal y se extiende cordialmente al destinatario y a su esposo(a)<br></li>
-            <li>📍 Hotel Wayra: Cruce Av. Universitaria con Av. Alisos</li>
-            <li>🅿️ Estacionamiento disponible, dentro del hotel, (anticiparnos previo al evento con DNI/Placa)</li>
-
+            <li>🎟️ <strong>Capacidad Limitada</strong>, por favor registrarse para confirmar su presencia.<br></li>
         </ul>
 
         <a class="back" href="index.html">← Volver a la invitación</a>
