--- a/instrucciones.html
+++ b/instrucciones.html
@@ -118,7 +118,7 @@
         <ul class="info-list">
             <li>👗 Código de vestimenta formal</li>
             <li>🚫 Se solicita amablemente evitar los colores perla y blanco</li>
-            <li>🚸 Con cariño les informamos que la recepción será solo para adultos. Agradecemos su comprensión</li>
+            <li>🚸 Con cariño les informamos que la recepción será solo para <strong>adultos</strong>. Agradecemos su comprensión</li>
             <li>🎟️ Esta invitación es personal y se extiende cordialmente al destinatario y a su esposo(a)<br></li>
             <li>🎟️ <strong>Capacidad Limitada</strong>, por favor registrarse para confirmar su presencia.<br></li>
         </ul>
