--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 
             <p>¡Los esperamos!</p>
             <br>
-            <h5 >Confirma tu asistencia aquí</h5>
+            <h4 >Confirma tu asistencia aquí</h4>
+            <p>(registro solo hasta el 12 de Agosto)</p>
             <p>
                 <a href="confirmacion.html">
                     <button>Registro</button>
