--- a/index.html
+++ b/index.html
@@ -343,12 +343,10 @@
             <p>¡Los esperamos!</p>
             <br>
             <h4 >Confirma tu asistencia aquí</h4>
-            <p>(registro solo hasta el 12 de Agosto)</p>
-            <p>
                 <a href="confirmacion.html">
                     <button>Registro</button>
                 </a>
-            </p>
+            <p>registros solo hasta el 12 de Agosto</p>
             <br>
 
             <p>
