--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 <a href="confirmacion.html">
                     <button>Registro</button>
                 </a>
-            <p>registros solo hasta el 12 de Agosto</p>
+            <!-- <p>registros solo hasta el 12 de Agosto</p> -->
             <br>
 
             <p>
