--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
 
             <p>¡Los esperamos!</p>
             <br>
-            <h4 >Confirma tu asistencia aquí</h4>
+            <!-- <h4 >Confirma tu asistencia aquí</h4>
                 <a href="confirmacion.html">
                     <button>Registro</button>
-                </a>
+                </a> -->
             <!-- <p>registros solo hasta el 12 de Agosto</p> -->
-            <br>
-            <br>
+            <!-- <br> -->
+            <!-- <br> -->
             <p>
                 <a href="regalos.html" class="gift-link">→ Si deseas tener un detalle con nosotros, aquí te compartimos algunas
                     ideas</a>
