oy - fix register

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <body>
     <!-- Enlaces superiores -->
     <div class="top-links">
-        <a href="confirmacion.html">Registrarse</a>
+        <!-- <a href="confirmacion.html">Registrarse</a> -->
         <a href="regalos.html">Regalos</a>
         <a href="instrucciones.html">Consideraciones</a>
     </div>
